--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --primary-color: #212121;
     --secondary-color: #757575;
     --accent-color: #2196F3;
@@ -14,20 +14,16 @@
     --text-size: 14px;
 
     --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-ul {
+/* ul {
     list-style: none;
     padding: 0;
     margin: 0;
-}
-
-/* * {
-    box-sizing: border-box;
 } */
 
 /* reset */
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -35,88 +31,94 @@ h5,
 h6,
 p {
     margin: 0;
-}
+} */
 
-.page {
+/* .page {
     color: var(--secondary-color);
     font-family: var(--main-font);
     font-size: var(--text-size);
-}
+} */
 
 /* header */
 /* по вертикали по центру align-items: center; */
 
-.header {
-    /* z-index: 100; */
-}
-
-.container-header {
+/* .container-header {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
     display: flex;
-    /* align-items: center; */
-}
+} */
 
-.nav {
+/* header navigation */
+
+/* .nav {
     display: flex;
    
-}
+} */
 
-.logo {
-    display: block;
-    padding-top: 24px;
-    padding-bottom: 25px;
-
+/* .logo {
     color: var(--accent-color);
     font-family: var(--secondary-font);
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.19;
-    text-decoration: none;   
+    line-height: 1.19;  
+} */
+
+/* .header__logo {
+    display: block;
+
+    padding-top: 24px;
+    padding-bottom: 25px;
+
+    text-decoration: none; 
 }
 
-.logo-dot {
+.logo__dark {
     color: var(--black-color);
-}
+} */
 
-.nav-site  {
+
+/* .nav__list {
     display: flex ;
     margin-left: 92px;   
-}
+} */
 
-/* .nav-site .item:not(:last-child) {
+/* .nav__list .nav__item:not(:last-child) {
     margin-right: 50px;
 } */
-.nav-site .item + .item {
+
+/* .nav__list .nav__item + .nav__item {
     margin-left: 50px;
 }
 
-.nav-site .link {
+.nav__list .nav__link {
     display: block;
+
     padding-top: 32px;
     padding-bottom: 32px;
 }
 
-.studio {
-    color: var(--accent-color);
+.nav__link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
+}
+
+.nav__link--studio {
+    color: var(--accent-color);
+    
     text-decoration: none;
 
     transition: color var(--animation);
-    /* transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.studio:hover,
-.studio:focus {
+.nav__link--studio:hover,
+.nav__link--studio:focus {
     color: blue;
 }
 
-.item .studio::after {
+.nav__item .nav__link--studio::after {
     content: "";
     display: block;
 
@@ -125,127 +127,96 @@ p {
     border-radius: 2px;
    
     position: absolute;
-    top: 80px;
-        
+    top: 80px;      
 }
 
-.portfolio-contacts {
+.nav__link--portfolio-cont {
     color: var(--primary-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    
     text-decoration: none;
     
     transition: color var(--animation);
 }
 
-.portfolio-contacts:hover,
-.portfolio-contacts:focus {
+.nav__link--portfolio-cont:hover,
+.nav__link--portfolio-cont:focus {
     color:#2196F3;
-}
+} */
 
+/* header contacts */
 
-
-.nav-address {
+/* .header__contacts {
     display: flex;
-    margin-left: auto;
-   
+    margin-left: auto;  
 }
 
-.nav-address .item + .item {
+.header__contacts .header__item + .header__item {
     margin-left: 30px;
 }
 
-/* .nav-address .item::before {
-    display: inline-block;
-    content: "";
-    width: 16px;
-    height: 12px;
-    outline: 1p solid red;
-    background-image: url(../img/hw-four/symbol-defs.svg#icon-envelope-hover);
-} */
-
-.envelope {
-    fill: var(--secondary-color);
-    margin-right: 10px;
-
-    transition: fill var(--animation);
-    
+.header__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
 }
 
-.envelope:hover,
-.envelope:focus {
+.header__link--mail-tel {
+    color: var(--secondary-color);
+   
+    text-decoration: none;
+
+    transition: color var(--animation);
+}
+
+.header__link--mail-tel:hover,
+.header__link--mail-tel:focus {
+    color:#2196F3;
+}
+
+.header__envelope {
+    fill: var(--secondary-color);
+
+    margin-right: 10px;
+
+    transition: fill var(--animation);   
+}
+
+.header__envelope:hover,
+.header__envelope:focus {
     fill: var(--accent-color);
 }
 
-.envelope {
+.header__envelope {
     fill: currentColor;
 }
 
-
-
-/* .nav-address .item:not(:last-child) {
-    margin-right: 50px;
-} */
-/* .nav-address .item + .item {
-    margin-left: 50px;
-} */
-.nav-address .link {
+.header__contacts .header__link {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
 }
 
-.mail {
-    color: var(--secondary-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    text-decoration: none;
-
-    transition: color var(--animation);
-   
-}
-.mail:hover,
-.mail:focus {
-    color:#2196F3;
-}
-
-.smartphone {
+.header__smartphone {
     fill: var(--secondary-color);
     margin-right: 10px;
 
     transition: fill var(--animation);
 }
 
-.smartphone:hover,
-.smartphone:focus {
+.header__smartphone:hover,
+.header__smartphone:focus {
     fill: var(--accent-color);
 }
 
-.smartphone {
+.header__smartphone {
     fill: currentColor;
-}
-
-.tel {
-    color: var(--secondary-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    text-decoration: none;
-
-    transition: color var(--animation);
-}
-.tel:hover,
-.tel:focus {
-    color:#2196F3;
-}
+} */
 
 /* main */
-/* section 1 */
+/* hero */
 /* не повторяться картинке background-repeat: no-repeat; */
 
-.hero {
+/* .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),
     url(../img/hw-four/workingprocess.jpg);
 
@@ -258,15 +229,15 @@ p {
     margin-right: auto;
 
     background-clip:border-box;
-}
-.section-one {
+} */
+/* .hero--section {
     background-color: var(--header-footer-color);
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
-}
+} */
 
-.section-one-title {
+/* .hero__title {
     width: 696px;
    margin-right: auto;
    margin-left: auto;
@@ -275,109 +246,125 @@ p {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-transform: uppercase;
-    margin-bottom: 40px;  
-}
 
-.button {
-    background-color:var(--accent-color);
+    text-transform: uppercase;
+
+    margin-bottom: 40px;  
+} */
+
+/* .hero__button {
     border: none;
     border-radius: 4px;
+    padding: 10px 32px;
+
+    background-color:var(--accent-color);
     color: var(--white-color);
+
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
+
     cursor: pointer;
-    padding: 10px 32px;
     
-    transition: color var(--animation), background-color var(--animation);
-  
+    transition: color var(--animation), background-color var(--animation); 
 }
-.button:hover,
-.button:focus {
+.hero__button:hover,
+.hero__button:focus {
     background-color: #188ce8;
     color: var(--white-color);
-}
+} */
 
 /* section 2 */
-.section-two {
+
+/* .section-two {
     padding-top: 94px;
     padding-bottom: 94px;
-}
+} */
 
-.container {
+/* .container {
     width: 1200px;
     margin: 0 auto;
     padding: 0 15px;  
-}
-.container-btn-icon {
-   margin-bottom: 30px;
-      
+} */
+
+/* criteria-list */
+
+/* .criteria-list {
+    display: flex;
 }
 
-.btn {
+.criteria-list .criteria-list__item {
+    width: 270px;
+}
+
+.criteria-list .criteria-list__item + .criteria-list__item {
+    margin-left: 30px;
+}
+
+.criteria-list__container {
+    margin-bottom: 30px;     
+ }
+ 
+ .criteria-list__btn {
     padding: 0;
     border: none;
     width: 270px;
     height: 120px;
-}
+ } */
 
-.ul-section-two {
-    display: flex;
-}
-
-.ul-section-two .item {
-    width: 270px;
-}
-
-
-.ul-section-two .item + .item {
-    margin-left: 30px;
-}
-
- .title {
+ /* .title {
     color: var(--primary-color);
-}
+} */
 
-.title-section-two {
+/* .criteria-list__title {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
    
     margin-bottom: 10px;   
 }
-.text {
+.criteria-list__text {
     line-height: 1.71;
  
     margin-bottom: 0;  
-}
+} */
 
 /* section 3 */
-.section-three {
+/* .section-three {
     text-align: center;
     padding-bottom: 94px;
 }
 
-.title-section-three {
+.section-three__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
-    margin-bottom: 50px;   
-}
 
-.ul-section-three {
+    margin-bottom: 50px;   
+} */
+
+/* examples-list */
+
+/* .examples-list {
     display: flex;
 }
 
-.ul-section-three .item + .item {
+.examples-list .examples-list__item + .examples-list__item {
     margin-left: 30px;
 }
 
-.container-img {
+.examples-list__container {
     position: relative;
 }
 
-.label {
+.examples-list__img {
+    display: block; 
+
+    width: 370px;
+    height: 294px;     
+}
+
+.examples-list__label {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -392,86 +379,87 @@ p {
     background-color: rgba(47, 48, 58, 0.8);
 }
 
-.text-label {
-    color: rgba(255, 255, 255, 1);
-
-   
-
-    text-transform: uppercase;
-
+.examples-list__text {
     font-family: var(--main-font);
     font-weight: 700;
     font-size: 16px;
     line-height: 1.14;
 
-}
+    color: rgba(255, 255, 255, 1);
 
-.img {
-    width: 370px;
-    height: 294px;
-    display: block;   
-}
+    text-transform: uppercase;
+} */
 
 /* section 4 */
-.section-four {
+
+/* .section-four {
     background-color: var(--grey-color);
+
     text-align: center;
+
     padding-bottom: 94px;
     padding-top: 94px;  
-    /* margin-bottom: 94px; */
 }
 
-.title-section-four {
+.section-four__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
     margin-bottom: 50px;  
-}
+} */
 
-.ul-section-four {
+/* team-list */
+
+/* .team-list {
     display: flex;    
 }
 
-.li-section-four {
+.team-list__item {
     background-color: var(--white-color);
     width: 270px;
+    height: 428px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+    border-radius: 0px 0px 4px 4px;   
 }
 
-.ul-section-four .li-section-four + .li-section-four {
+.team-list .team-list__item + .team-list__item {
     margin-left: 30px;
 }
 
-.container-title-text {
+.team-list__container {
     padding-top: 30px;
     padding-bottom: 30px;
 } 
 
-.title-four {
+.team-list__title {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
+
     margin-bottom: 10px;   
 }
 
-.text-section-four {
+.team-list__text {
     font-size: 16px;
     line-height: 1.18;
     margin-bottom: 16px;
-}
+} */
 
-.ul-container-social {
+/* social-list */
+
+/* .social-list {
     display: flex;
     justify-content: center;
 }
 
-.ul-container-social .item + .item {
+.social-list .social-list__item + .social-list__item {
     margin-left: 10px;
 }
-.link-social {
+
+.social-list__link {
     width: 44px;
     height: 44px;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -485,35 +473,38 @@ p {
     transition: fill var(--animation), background-color var(--animation);
 }
 
-.link-social:hover,
-.link-social:focus {
+.social-list__link:hover,
+.social-list__link:focus {
     background-color: var(--accent-color);
     fill: var(--white-color); 
-}
+} */
 
 /* section 5 */
-.section-five {
+
+/* .section-five {
     text-align: center;
     padding-top: 94px;
     padding-bottom: 94px;
 }
-.title-section-five {
+
+.section-five__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
     margin-bottom: 50px;  
-}
+} */
 
-.clients {
+/* clients-list */
+
+/* .clients-list {
     display: flex;
 }
 
-.clients .item + .item {
+.clients-list .clients-list__item + .clients-list__item {
     margin-left: 30px;
 }
 
-
-.clients-link {
+.clients-list__link {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -530,68 +521,67 @@ p {
     transition: fill var(--animation), border var(--animation);
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients-list__link:hover,
+.clients-list__link:focus {
     fill: var(--accent-color);
     border-color: var(--accent-color);   
-}
-
-
+} */
 
 /* footer */
-.footer {
+
+/* .footer {
     background-color: var(--header-footer-color);
     padding-top: 60px;
     padding-bottom: 60px;   
 }
 
-.cont {
+.container--line {
     display: flex;
     align-items: baseline;
 }
 
-.container-footer {
+.footer__container {
     margin-right: 70px;
-}
+} */
 
-.logo-footer {
-    color: var(--accent-color);
-    font-family: var(--secondary-font);
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    text-decoration: none;
-    
+/* .footer__logo {
     display: block;
-    margin-bottom: 20px;  
+
+    margin-bottom: 20px;
+
+    text-decoration: none;  
 }
 
-.logo-dot-footer {
+.logo__light {
     color: var(--white-color);
-}
+} */
 
-.address {
+/* address */
+
+/* .address {
     font-style: normal;
 }
 
-.address-item .item {
+.address__list .address__item {
     margin-bottom: 9px;
 }
 
-.maps {
+.address__maps {
    color: var(--white-color);
+
     line-height: 1.71;
+
     text-decoration: none;
 
     transition: color var(--animation);
 }
 
-.maps:hover,
-.maps:focus {
+.address__maps:hover,
+.address__maps:focus {
     color: #2196F3;
 }
 
-.mailto-tel {
+.address__mailto-tel {
     color: rgba(255, 255, 255, 0.6);
     line-height: 1.71;
     text-decoration: none;
@@ -599,16 +589,18 @@ p {
     transition: color var(--animation);
 }
 
-.mailto-tel:hover,
-.mailto-tel:focus {
+.address__mailto-tel:hover,
+.address__mailto-tel:focus {
     color: #2196F3;
-}
+} */
 
-.container-social-footer {
+/* footer-social */
+
+/* .footer-social {
     margin-right: auto;
 }
 
-.strong-footer {
+.footer-social__text {
     display: inline-block;
 
     color: var(--white-color);
@@ -621,38 +613,40 @@ p {
     text-transform: uppercase;   
 }
 
-.ul-social-footer {
+.footer-social__list {
     display: flex;
 }
 
-.ul-social-footer .item + .item {
+.footer-social__list .footer-social__item + .footer-social__item {
     margin-left: 10px;
 }
 
-.link-social-footer {
+.footer-social__link {
     display: flex;
-    width: 44px;
-    height: 44px;
     align-items: center;
     justify-content: center;
+
+    width: 44px;
+    height: 44px;
+    
     border-radius: 50%;
+
     fill: var(--white-color);
     background-color: rgba(255, 255, 255, 0.1);
     
     transition: background-color var(--animation);
 }
 
-.link-social-footer:hover,
-.link-social-footer:focus {
+.footer-social__link:hover,
+.footer-social__link:focus {
     background-color: var(--accent-color);
-}
+} */
 
-
-.container-form {
+/* .container-form {
     display: block;
 }
 
-.strong-text {
+.container-form__text {
     display: block;
 
     font-family: var(--main-font);
@@ -665,18 +659,20 @@ p {
     margin-bottom: 20px;
 
     text-transform: uppercase;
-}
+} */
 
-.form-footer {
+/* footer-form */
+
+/* .footer-form {
     display: flex;
 }
 
-.label-footer {
+.footer-form__label {
     display: inline-block;
     margin-right: 12px;  
 }
 
-.input-footer {
+.footer-form__input {
     width: 385px;
     height: 50px;
 
@@ -691,8 +687,8 @@ p {
     transition: border-color var(--animation);
 }
 
-.input-footer:hover,
-.input-footer:focus {
+.footer-form__input:hover,
+.footer-form__input:focus {
     border-color: var(--accent-color);
 }
 
@@ -701,11 +697,10 @@ input[placeholder] {
    font-size: 16px;
    line-height: 1.25;
 
-   color: rgba(255, 255, 255, 0.6); 
-  
-}
+   color: rgba(255, 255, 255, 0.6);  
+} */
 
-.button-footer {
+/* .footer-form__button {
     display: flex;
     align-items: center;
 
@@ -726,20 +721,18 @@ input[placeholder] {
      
 }
 
-.button-footer:hover,
-.button-footer:focus {
+.footer-form__button:hover,
+.footer-form__button:focus {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+} */
 
-
-.icon-button-footer{
+/* .footer-form__icon{
     margin-left: 10px;
-}
-
+} */
 
 /* Modal window */
 
-.backdrop {
+/* .backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -757,9 +750,9 @@ input[placeholder] {
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
-}
+} */
 
-.modal {
+/* .modal {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -802,9 +795,9 @@ input[placeholder] {
 .modal-btn:hover,
 .modal-btn:focus {
     fill: var(--accent-color);
-}
+} */
 
-.register-form-title {
+/* .register-form-title {
     display: block;
     text-align: center;
 
@@ -820,9 +813,9 @@ input[placeholder] {
 
 .register-form-group {
     margin-bottom: 20px;
-}
+} */
 
-.modal-label {
+/* .modal-label {
     position: relative;
 
     display: block;
@@ -861,9 +854,9 @@ input[placeholder] {
 .input-modal:hover {
     border-color: rgba(33, 150, 243, 1); 
     
-}
+} */
 
-.icon-modal {
+/* .icon-modal {
     position: absolute;
     bottom: 11px;
     left: 12px;
@@ -873,9 +866,9 @@ input[placeholder] {
 
 .input-modal:focus + .icon-modal {
     fill: rgba(33, 150, 243, 1);
-}
+} */
 
-.modal-label-textarea {
+/* .modal-label-textarea {
     display: block;
     width: 448px;
     height: 138px;
@@ -897,9 +890,9 @@ input[placeholder] {
 .textarea-modal:hover,
 .textarea-modal:focus {
     border-color: var(--accent-color);
-}
+} */
 
-.modal-label-checkbox {
+/* .modal-label-checkbox {
     display: block;
 
     display: flex;
@@ -912,12 +905,10 @@ input[placeholder] {
 .input-checkbox {
     width: 16px;
     height: 15px;
-    margin-right: 8px;
+    margin-right: 8px; 
+} */
 
-    /* appearance: none; */   
-}
-
-.visually-hidden {
+/* .visually-hidden {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -929,9 +920,9 @@ input[placeholder] {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
-}
+} */
 
-.input-checkbox:checked + .icon {
+/* .input-checkbox:checked + .icon {
     border-color: var(--accent-color);
     background-color: var(--accent-color);
     background-image: url(../img/check.svg);
@@ -964,9 +955,9 @@ input[placeholder] {
     line-height: 1.71;
 
     color: rgba(117, 117, 117, 1);
-}
+} */
 
-.link-modal {
+/* .link-modal {
     color: rgba(33, 150, 243, 1);
 }
 
@@ -993,4 +984,4 @@ input[placeholder] {
 .button-modal:hover,
 .button-modal:focus {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+} */
