--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --primary-color: #212121;
     --secondary-color: #757575;
     --accent-color: #2196F3;
@@ -12,112 +12,123 @@
     --text-size: 16px;
 
     --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-ul {
+/* ul {
     list-style: none;
     padding: 0;
     margin: 0;
-}
-
-/* reset */
-h2,
-p {
-    margin: 0;
-}
-
-/* * {
-    box-sizing: border-box;
 } */
 
-.page {
+/* reset */
+
+/* h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+} */
+
+/* .page {
     color: var(--primary-color);
     font-family: var(--main-font);
     font-size: var(--text-size);
-}
+} */
+
 /* header */
 
-.header {
+/* .header {
     border-bottom: 1px solid #ECECEC;
-}
+} */
 
-.container-header {
+/* .container-header {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
     display: flex;
-}
-.nav {
+} */
+
+/* header navigation */
+
+/* .nav {
     display: flex;
-}
+} */
 
-.logo {
+/* .logo {
     color: var(--accent-color);
-    text-decoration: none;
-
     font-family: var(--secondary-font);
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    
+}
+
+.logo__dark {
+    color: var(--black-color);
+} */
+
+
+/* .header__logo {
     display: block;
+
     padding-top: 24px;
     padding-bottom: 25px;
-}
 
-.logo-dot {
-    color: var(--black-color);
-}
+    text-decoration: none; 
+} */
 
-.nav-site {
+
+/* .nav__list {
     display: flex;
     margin-left: 92px;
 }
 
-.nav-site .item + .item {
+.nav__list .nav__item + .nav__item {
     margin-left: 50px;
 }
 
-.nav-site .link {
+.nav__list .nav__link {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
 }
 
-.studio {
-    color: var(--primary-color);
-    text-decoration: none;
-
+.nav__link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
-    
+}
+
+.nav__link--studio-primary {
+    color: var(--primary-color);
+
+    text-decoration: none;
+
     transition: color var(--animation);
 }
 
-.studio:hover,
-.studio:focus {
+.nav__link--studio-primary:hover,
+.nav__link--studio-primary:focus {
     color: #2196F3;
 }
 
-.portfolio {
+.nav__link--portfolio-accent {
     color: var(--accent-color);
-    text-decoration: none;
 
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    text-decoration: none;
 
     transition: color var(--animation);  
 }
 
-.portfolio:hover,
-.portfolio:focus {
+.nav__link--portfolio-accent:hover,
+.nav__link--portfolio-accent:focus {
     color: blue;
 }
 
-.item .portfolio::after {
+.nav__link--portfolio-accent::after {
     content: "";
     display: block;
 
@@ -130,75 +141,72 @@ p {
         
 }
 
-.contacts {
+.nav__link--contacts {
     color: var(--primary-color);
-    text-decoration: none;
 
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    text-decoration: none;
 
     transition: color var(--animation);
 }
 
-.contacts:hover,
-.contacts:focus {
-    color: #2196F3;
-    
-}
+.nav__link--contacts:hover,
+.nav__link--contacts:focus {
+    color: #2196F3;   
+} */
 
-.nav-address {
+/* header contacts */
+
+/* .header__contacts {
     display: flex;
     margin-left: auto;   
 }
 
-.icon-envelope-hover {
-    margin: 34px 10px 34px 0;
-}
-
-.envelope {
+.header__envelope {
     fill: var(--secondary-color);
     margin-right: 10px;
 
     transition: fill var(--animation);
 }
 
-.envelope:hover,
-.envelope:focus {
+.header__envelope:hover,
+.header__envelope:focus {
     fill: var(--accent-color);
 }
 
-.envelope {
+.header__envelope {
     fill: currentColor;
 }
 
-.nav-address .item + .item {
+.header__contacts .header__item + .header__item {
     margin-left: 50px;
 }
 
-.nav-address .link {
+.header__contacts .header__link {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
 }
 
-.mail {
-    color: var(--secondary-color);
-    text-decoration: none;
-
+.header__link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
+}
+
+.header__link--mail-tel {
+    color: var(--secondary-color);
+
+    text-decoration: none;
 
     transition: color var(--animation);  
 }
 
-.mail:hover,
-.mail:focus {
+.header__link--mail-tel:hover,
+.header__link--mail-tel:focus {
     color:#2196F3;
 }
 
- .smartphone {
+ .header__smartphone {
      fill: var(--secondary-color);
 
      margin-right: 10px;
@@ -206,47 +214,31 @@ p {
      transition: fill var(--animation);
  }
  
- .smartphone:hover,
-.smartphone:focus {
+ .header__smartphone:hover,
+.header__smartphone:focus {
     fill: var(--accent-color);
 }
 
-.smartphone {
+.header__smartphone {
     fill: currentColor;
-}
-
-.tel {
-    color: var(--secondary-color);
-    text-decoration: none;
-
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-
-    transition: color var(--animation);
-}
-
-.tel:hover,
-.tel:focus {
-    color: #2196F3;
-}
+} */
 
 /* main */
 
-.section {
+/* .section {
     padding-top: 94px;
     padding-bottom: 94px;
-}
+} */
 
-/* button */
+/* list-button */
 
-.container {
+/* .container {
     width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
-}
+} */
 
-.ul-button {
+/* .list-button {
     display: flex;
     margin-left: auto;
     margin-right: auto;
@@ -255,15 +247,15 @@ p {
        
 }
 
-.ul-button .item + .item {
+.list-button .list-button__item + .list-button__item {
     margin-left: 9px;
 }
 
-.button .btn {
+.list-button__button .list-button__button--btn {
     padding: 6px 25px;
 }
 
-.button {
+.list-button__button {
    border: none;
    border-radius: 4px;
 
@@ -282,56 +274,58 @@ p {
 
 }
 
-.button:hover,
-.button:focus {
+.list-button__button:hover,
+.list-button__button:focus {
     color: var(--white-color);
     background-color: var(--accent-color);
     
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1); 
-}
+} */
 
   /* img */
 
-.ul-container {
+/* .list-project {
     display: flex;
     flex-wrap: wrap;
     
-}
+} */
 
 /* перенос на новый ряд flex-wrap: wrap; */
-.li-container {
+/* .list-project__item {
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
 }
 
 
-.li-container:nth-child(3n) {
+.list-project__item:nth-child(3n) {
     margin-right: 0;
 }
 
-.li-container:nth-last-child(-n + 3) {
+.list-project__item:nth-last-child(-n + 3) {
     margin-bottom: 0;
 }
 
-.link {
+.list-project__link {
     display: block;
     text-decoration: none;
 
     transition: box-shadow var(--animation);
 }
 
-.link:hover,
-.link:focus {
+.list-project__link:hover,
+.list-project__link:focus {
     box-shadow:  1px 4px 6px rgba(29, 3, 3, 0.16),  0px 4px 4px rgba(0, 0, 0, 0.06),  0px 1px 1px rgba(0, 0, 0, 0.12); 
 }
 
-.img-container {
+.list-project__container-img {
     position: relative;
     overflow: hidden;
-}
+} */
 
-.overlay {
+/* overlay */
+
+/* .overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -347,28 +341,23 @@ p {
     justify-content: center;
     padding: 63px 24px;
 
-    background-color: rgba(33, 150, 243, 0.9);
-    
+    background-color: rgba(33, 150, 243, 0.9);   
 }
 
-.link:hover .overlay,
-.link:focus .overlay {
-    transform: translateY(0);
-}
-
-.overlay-desc {
+.overlay__text {
     color: rgba(255, 255, 255, 1);
 
     font-family: var(--main-font);
     font-size: 18px;
     line-height: 1.55;
+} */
+
+/* .list-project__link:hover .overlay,
+.list-project__link:focus .overlay {
+    transform: translateY(0);
 }
 
-.img {
-    width: 370px;
-    height: 294px;
-}
-.title-text {
+.list-project__container-title {
     border-left: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
@@ -376,7 +365,7 @@ p {
     padding: 20px 24px;
    
 }
-.title {
+.list-project__title {
     color: var(--primary-color);
 
     font-weight: 700;
@@ -385,146 +374,124 @@ p {
 
     margin-bottom: 4px;
 }
-.text {
+.list-project__text {
     color: var(--secondary-color);
    
     line-height: 1.87;
-}
+} */
 
 /* footer */
-.footer {
-    background-color: #2F303A;
 
+/* .footer {
+    background-color: var(--header-footer-color);
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 60px;   
 }
 
-.cont {
+.container--line {
     display: flex;
     align-items: baseline;
 }
 
-.container-footer {
+.footer__container {
     margin-right: 70px;
 }
 
-.logo-footer {
-    color: var(--accent-color);
-    text-decoration: none;
-
-    font-family: var(--secondary-font);
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-
+.footer__logo {
     display: block;
+
     margin-bottom: 20px;
+
+    text-decoration: none;  
 }
 
-.logo-footer-dot {
+.logo__light {
     color: var(--white-color);
 }
 
-.address {
+/* address */
+
+/* .address {
     font-style: normal;
 }
 
-.address-item .item {
+.address__list .address__item {
     margin-bottom: 9px;
 }
 
-.maps {
-    color: var(--white-color);
-    text-decoration: none;
- 
-    font-size: 14px;
+.address__maps {
+   color: var(--white-color);
+
     line-height: 1.71;
+
+    text-decoration: none;
 
     transition: color var(--animation);
 }
 
-.maps:hover,
-.maps:focus {
+.address__maps:hover,
+.address__maps:focus {
     color: #2196F3;
 }
 
-.mailto {
-    color:  rgba(255, 255, 255, 0.6);
-    text-decoration: none;
-   
-    font-size: 14px;
+.address__mailto-tel {
+    color: rgba(255, 255, 255, 0.6);
     line-height: 1.71;
+    text-decoration: none;
 
     transition: color var(--animation);
 }
 
-.mailto:hover,
-.mailto:focus {
+.address__mailto-tel:hover,
+.address__mailto-tel:focus {
     color: #2196F3;
-}
+} */
 
+/* footer-social */
 
-.tell {
-    color:  rgba(255, 255, 255, 0.6);
-    text-decoration: none;
-   
-    font-size: 14px;
-    line-height: 1.71;
-
-    transition: color var(--animation);
-}
-
-.tell:hover,
-.tell:focus {
-    color: #2196F3;
-}
-
-.container-social-footer {
-    padding-top: 12px;
+/* .footer-social {
     margin-right: auto;
-
 }
 
-.strong-footer {
+.footer-social__text {
     display: inline-block;
 
     color: var(--white-color);
-
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
    
     margin-bottom: 20px;
-    
-    text-transform: uppercase; 
+
+    text-transform: uppercase;   
 }
 
-.ul-social-footer {
+.footer-social__list {
     display: flex;
 }
 
-.ul-social-footer .item + .item {
+.footer-social__list .footer-social__item + .footer-social__item {
     margin-left: 10px;
 }
 
-.link-social-footer {
+.footer-social__link {
     display: flex;
-    width: 44px;
-    height: 44px;
-
     align-items: center;
     justify-content: center;
 
+    width: 44px;
+    height: 44px;
+    
     border-radius: 50%;
 
     fill: var(--white-color);
-    background-color:  rgba(117, 117, 117, 1);
+    background-color: rgba(255, 255, 255, 0.1);
     
     transition: background-color var(--animation);
 }
 
-.link-social-footer:hover,
-.link-social-footer:focus {
+.footer-social__link:hover,
+.footer-social__link:focus {
     background-color: var(--accent-color);
 }
 
@@ -532,7 +499,7 @@ p {
     display: block;
 }
 
-.strong-text {
+.container-form__text {
     display: block;
 
     font-family: var(--main-font);
@@ -545,18 +512,20 @@ p {
     margin-bottom: 20px;
 
     text-transform: uppercase;
-}
+} */
 
-.form-footer {
+/* footer-form */
+
+/* .footer-form {
     display: flex;
 }
 
-.label-footer {
+.footer-form__label {
     display: inline-block;
-    margin-right: 12px;   
+    margin-right: 12px;  
 }
 
-.input-footer {
+.footer-form__input {
     width: 385px;
     height: 50px;
 
@@ -571,27 +540,25 @@ p {
     transition: border-color var(--animation);
 }
 
-.input-footer:hover,
-.input-footer:focus {
+.footer-form__input:hover,
+.footer-form__input:focus {
     border-color: var(--accent-color);
 }
-
 
 input[placeholder] {
    font-family: var(--main-font);
    font-size: 16px;
    line-height: 1.25;
 
-   color: rgba(255, 255, 255, 0.6); 
-  
+   color: rgba(255, 255, 255, 0.6);  
 }
 
-.button-footer {
+.footer-form__button {
     display: flex;
     align-items: center;
 
     padding: 10px 28px;
-    
+
     border: none;
     border-radius: 4px;
 
@@ -607,14 +574,13 @@ input[placeholder] {
      
 }
 
-.button-footer:hover,
-.button-footer:focus {
+.footer-form__button:hover,
+.footer-form__button:focus {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-
-.icon-button-footer{
+.footer-form__icon{
     margin-left: 10px;
 }
-
-
+  */
+  
